# validate-schema-with-graphql

./: .gitignore  Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs
crates/graphql-ish-schema-validator/: Cargo.toml
crates/graphql-ish-schema-validator/src/: lib.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs
crates/sdl-parser/: Cargo.toml
crates/sdl-parser/src/: lib.rs
crates/validate-schema-with-graphql/: Cargo.toml
crates/validate-schema-with-graphql/src/: lib.rs  voyager.rs
crates/validator/: Cargo.toml
crates/validator/src/: lib.rs
docs/plans/01-initial-attempt/: 00-overview.md  01-ir-design.md  02-sdl-grammar.md  03-compiler-lowering.md  04-validator-runtime.md  05-error-reporting.md  06-schema-registry.md  07-cli-design.md  08-project-structure.md  09-testing-strategy.md  10-jtd-export.md  11-milestones.md
docs/plans/02-interface-improvements/: 00-rename-and-restructure.md  01-public-api.md  02-logging-and-diagnostics.md  03-cli-improvements.md  04-testing-and-verification.md  05-migration-checklist.md
docs/research/chatgpt/: initial-deep-research-report-chatgpt.md  second-deep-research-report-chatgpt.md
docs/research/opencode/: README.md  apollo-parser-analysis.md  gap-analysis.md  jtd-rfc8927-analysis.md  kubeconform-miette-competitors.md  rust-tooling-2026.md  yaml-parser-analysis.md
tests/fixtures/documents/invalid/: widget_bad.yaml  workflow_bad.yaml
tests/fixtures/documents/valid/: widget.yaml  workflow.yaml
tests/fixtures/schemas/: simple.graphql  workflow.graphql
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
