[workspace]
members = [
    "crates/ir",
    "crates/sdl-parser",
    "crates/compiler",
    "crates/validator",
    "crates/diagnostics",
    "crates/cli",
    "crates/graphql-ish-schema-validator",
    "tests/integration",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
miette = { version = "7.0", features = ["fancy"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SDL parsing
apollo-parser = "0.8"

# YAML parsing
serde-saphyr = "0.0.21"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
indexmap = "2.2"
regex = "1.10"

# Dev dependencies
proptest = "1.4"
insta = { version = "1.36", features = ["json"] }
