[package]
name = "graphql-ish-schema-validator-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary for graphql-ish-schema-validator"

[[bin]]
name = "graphql-ish-schema-validator"
path = "src/main.rs"

[dependencies]
graphql-ish-schema-validator = { path = "../graphql-ish-schema-validator" }
graphql-ish-schema-validator-parser = { path = "../sdl-parser" }
graphql-ish-schema-validator-compiler = { path = "../compiler" }
clap = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["yaml"]
yaml = ["graphql-ish-schema-validator/yaml"]
