[package]
name = "validate-schema-with-graphql-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary for validate-schema-with-graphql"

[[bin]]
name = "validate-schema-with-graphql"
path = "src/main.rs"

[dependencies]
validate-schema-with-graphql = { path = "../validate-schema-with-graphql" }
validate-schema-with-graphql-parser = { path = "../sdl-parser" }
validate-schema-with-graphql-compiler = { path = "../compiler" }
clap = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["yaml"]
yaml = ["validate-schema-with-graphql/yaml"]
