[package]
name = "graphql-ish-schema-validator-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDL AST to IR lowering compiler"

[dependencies]
graphql-ish-schema-validator-ir = { path = "../ir" }
graphql-ish-schema-validator-parser = { path = "../sdl-parser" }
graphql-ish-schema-validator-diagnostics = { path = "../diagnostics" }
thiserror = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
