[package]
name = "validate-schema-with-graphql-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDL AST to IR lowering compiler"

[dependencies]
validate-schema-with-graphql-ir = { path = "../ir" }
validate-schema-with-graphql-parser = { path = "../sdl-parser" }
validate-schema-with-graphql-diagnostics = { path = "../diagnostics" }
thiserror = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
