[package]
name = "graphql-ish-schema-validator-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Error types and diagnostic reporting for graphql-ish-schema-validator"

[dependencies]
thiserror = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["fancy"]
fancy = ["miette/fancy"]
