[package]
name = "validate-schema-with-graphql-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JTD-like schema IR types for validate-schema-with-graphql"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
