[package]
name = "validate-schema-with-graphql-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GraphQL SDL parser using apollo-parser with CST walking"

[dependencies]
apollo-parser = { workspace = true }
validate-schema-with-graphql-ir = { path = "../ir" }
validate-schema-with-graphql-diagnostics = { path = "../diagnostics" }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
