[package]
name = "validate-schema-with-graphql-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IR-based YAML/JSON document validation"

[dependencies]
validate-schema-with-graphql-ir = { path = "../ir" }
validate-schema-with-graphql-diagnostics = { path = "../diagnostics" }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
serde-saphyr = { workspace = true, optional = true }
regex = { workspace = true }

[features]
default = ["yaml"]
yaml = ["serde-saphyr"]

[dev-dependencies]
serde-saphyr = { workspace = true }
insta = { workspace = true }
proptest = { workspace = true }
