[package]
name = "validate-schema-with-graphql-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
validate-schema-with-graphql-ir = { path = "../../crates/ir" }
validate-schema-with-graphql-parser = { path = "../../crates/sdl-parser" }
validate-schema-with-graphql-compiler = { path = "../../crates/compiler" }
validate-schema-with-graphql-validator = { path = "../../crates/validator" }
validate-schema-with-graphql-diagnostics = { path = "../../crates/diagnostics" }
serde_json = { workspace = true }
